styles.css
body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-image: linear-gradient(to top, rgb(64, 82, 247), rgb(113, 174, 253));
    height: 100vh;
}

.container {
    position: relative;
}

.container > h1 {
    text-align: center;
}

#add-book {
    position: fixed;
    top: 10px;
    right: 10px
}

table {
    margin: 0 auto;
    border-radius: 5px;
    padding: 5px;
}

th,
td {
    padding: 5px;
    border-radius: 2px;
    margin: 0px;
    background-color: rgb(241, 241, 241);
}

tbody tr:nth-of-type(2n + 2) td {
    background-color: rgb(236, 236, 236);
}

.form-container {
    margin-top: 10px;
    width: fit-content;
    margin: 0 auto;
    padding: 10px;
    border-radius: 5px;
    background-color: whitesmoke;
}

#form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

input {
    padding: 7px;
    border-radius: 5px;
    border: none;
}

input[type="text"] {
    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.219);
}

button {
    border-radius: 5px;
    border: none;
    padding: 8px 28px;
    background-color: rgb(123, 162, 248);
    font-weight: bold;
    color: whitesmoke;
    transition: background-color 100ms;
}

button:hover {
    background-color: rgb(149, 181, 250);
}

button:active {
    background-color: rgb(76, 131, 252);
}

.btn-delete {
    background-color: red;
    margin-left: 5px;
}

.btn-delete:hover {
    background-color: rgb(252, 86, 86);
}

.btn-delete:active {
    background-color: rgb(180, 0, 0);
}

#form > .btn-delete {
    margin-left: 0px;
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 250px, 300px), 400px));
    grid-auto-flow: row;
    gap: 10px;
    justify-content: center;
}

.card {
    border: 1px solid black;
    height: 250px;
    border-radius: 10px;
    padding: 10px;
    background-color: #ffffff80;
    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: center;
}

.card > div:first-child {
    font-weight: bold;
    font-size: 1.2rem;
}

dialog {
    position: fixed;
    top: 200px;
    border: none;
    background: none;
}

#modal-title > label {
    padding-right: 19px;
}

#modal-read > label {
    padding-right: 10px;
}

